[package]
name = "killjoy_turret"
version = "0.1.0"
authors = ["Nilstrieb <nilstrieb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
regex = "1.5.4"

[dependencies.serenity]
version = "0.10.7"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "cache", "http", "utils", "collector"]
